--- a/index.html
+++ b/index.html
@@ -11,76 +11,154 @@
 <link href="https://fonts.googleapis.com/css2?family=Titillium+Web:wght@200;300;400;600&display=swap" rel="stylesheet"> 
 <!--css file-->
 <link rel="stylesheet" href="resourecs/css/style.css">
-<title>Alomgir</title>
+<link rel="stylesheet" href="resourecs/css/responsive.css">
+<title>Alomgir Vaiya</title>
 </head>
 <body>
 
 
-<section class="team-section">
-    <div class="cantainer">
-        <div class="team-title text-center">
-            <h4 class="text-center text-light rounded bg-primary d-inline px-2 py-1 mt-4">Team</h4>
-            <h2 class="mt-3">Experienced & Professional Team</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempora, quaerat? Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique, adipisci!</p>
+<div class="container py-5">
+    <div class="row">
+        <div class="col-lg-6">
+            <div id="accordianId" role="tablist" aria-multiselectable="true">
+                <div class="card mb-3">
+                    <div class="card-header" role="tab" id="section1HeaderId">
+                        <h5 class="mb-0">
+                            <a data-toggle="collapse" data-parent="#accordianId" href="#section1ContentId" aria-expanded="true" aria-controls="section1ContentId">
+                      Hey!! Alogmir Vaiya Whats Up??
+                      <span class="fa fa-chevron-down fa-1x text-info pull-right"></span>
+                    </a>
+                        </h5>
+                    </div>
+                    <div id="section1ContentId" class="collapse in" role="tabpanel" aria-labelledby="section1HeaderId">
+                        <div class="card-body bg-dark text-light">
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum rerum voluptas quasi quisquam laborum omnis est libero voluptate accusamus unde aspernatur quidem labore, impedit illo commodi exercitationem fugit. Aliquam, eum?
+                        </div>
+                    </div>
+                </div>
+                <div class="card mb-3">
+                    <div class="card-header" role="tab" id="section2HeaderId">
+                        <h5 class="mb-0">
+                            <a data-toggle="collapse" data-parent="#accordianId" href="#section2ContentId" aria-expanded="true" aria-controls="section2ContentId">
+                      If You Have Any Web Design Please Give Me???
+                      <span class="fa fa-chevron-down fa-1x text-info pull-right"></span>
+                    </a>
+                        </h5>
+                    </div>
+                    <div id="section2ContentId" class="collapse in" role="tabpanel" aria-labelledby="section2HeaderId">
+                        <div class="card-body bg-dark text-light">
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem placeat eaque tempore asperiores laborum exercitationem sed illo fugiat. Nihil ut minima totam! Necessitatibus incidunt laudantium doloremque unde nisi rem recusandae nam magni debitis quasi suscipit, placeat quisquam eligendi numquam itaque corrupti earum! Nam consequuntur animi ad, quas distinctio libero unde.
+                        </div>
+                    </div>
+                </div>
+                <div class="card mb-3">
+                    <div class="card-header" role="tab" id="section2HeaderId">
+                        <h5 class="mb-0">
+                            <a data-toggle="collapse" data-parent="#accordianId" href="#section3ContentId" aria-expanded="true" aria-controls="section3ContentId">
+                      Actully I am looking For a Job??
+                      <span class="fa fa-chevron-down fa-1x text-info pull-right"></span>
+                    </a>
+                        </h5>
+                    </div>
+                    <div id="section3ContentId" class="collapse in" role="tabpanel" aria-labelledby="section2HeaderId">
+                        <div class="card-body bg-dark text-light">
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem placeat eaque tempore asperiores laborum exercitationem sed illo fugiat. Nihil ut minima totam! Necessitatibus incidunt laudantium doloremque unde nisi rem recusandae nam magni debitis quasi suscipit, placeat quisquam eligendi numquam itaque corrupti earum! Nam consequuntur animi ad, quas distinctio libero unde.
+                        </div>
+                    </div>
+                </div>
+                <div class="card mb-3">
+                    <div class="card-header" role="tab" id="section2HeaderId">
+                        <h5 class="mb-0">
+                            <a data-toggle="collapse" data-parent="#accordianId" href="#section4ContentId" aria-expanded="true" aria-controls="section4ContentId">
+                      You Can Give This Type of task. Its My plasure!!
+                      <span class="fa fa-chevron-down fa-1x text-info pull-right"></span>
+                    </a>
+                        </h5>
+                    </div>
+                    <div id="section4ContentId" class="collapse in" role="tabpanel" aria-labelledby="section2HeaderId">
+                        <div class="card-body bg-dark text-light">
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem placeat eaque tempore asperiores laborum exercitationem sed illo fugiat. Nihil ut minima totam! Necessitatibus incidunt laudantium doloremque unde nisi rem recusandae nam magni debitis quasi suscipit, placeat quisquam eligendi numquam itaque corrupti earum! Nam consequuntur animi ad, quas distinctio libero unde.
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
-        <div class="row">
-            <div class="col-lg-3 col-md-6 my-3">
-                <div class="team-info">
-                    <img src="resourecs/img/team1.jpg" height="200" width="200" alt="Team">
-                    <h4>Md. Bajlul Hoque</h4>
-                    <span>Managing Director</span>
-                    <p class="mb-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit. At aperiam reiciendis quaerat porro iusto, nihil quasi mollitia vitae labore amet voluptatem nostrum nobis consectetur ex? Iste temporibus minima id molestiae!</p>
-                    <a href="https://www.facebook.com/Mecha Techno LTD"><i class="fab fa-facebook text-dark fa-2x mx-1"></i></a>
-                    <a href="https://www.gmail.com/mechatechno@gmail.com"><i class="fas fa-envelope text-dark fa-2x mx-1"></i></a>
+<!-- another collum -->
+        <div class="col-lg-6">
+            <div id="accordianId" role="tablist" aria-multiselectable="true">
+                <div class="card mb-3">
+                    <div class="card-header" role="tab" id="section1HeaderId">
+                        <h5 class="mb-0">
+                            <a data-toggle="collapse" data-parent="#accordianId" href="#section5ContentId" aria-expanded="true" aria-controls="section5ContentId">
+                      Hey!! Alogmir Vaiya Whats Up??
+                      <span class="fa fa-chevron-down fa-1x text-info pull-right"></span>
+                    </a>
+                        </h5>
+                    </div>
+                    <div id="section5ContentId" class="collapse in" role="tabpanel" aria-labelledby="section1HeaderId">
+                        <div class="card-body bg-dark text-light">
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum rerum voluptas quasi quisquam laborum omnis est libero voluptate accusamus unde aspernatur quidem labore, impedit illo commodi exercitationem fugit. Aliquam, eum?
+                        </div>
+                    </div>
                 </div>
-            </div>
-            <div class="col-lg-3 col-md-6 my-3">
-                <div class="team-info">
-                    <img src="resourecs/img/team2.jpg" height="200" width="200" alt="Team">
-                    <h4>Md. Jamir Uddin Masud</h4>
-                    <span>Chairman</span>
-                    <p class="mb-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit. At aperiam reiciendis quaerat porro iusto, nihil quasi mollitia vitae labore amet voluptatem nostrum nobis consectetur ex? Iste temporibus minima id molestiae!</p>
-                        <a href="https://www.facebook.com/Mecha Techno LTD"><i class="fab fa-facebook text-dark fa-2x mx-1"></i></a>
-                        <a href="https://www.gmail.com/mechatechno@gmail.com"><i class="fas fa-envelope text-dark fa-2x mx-1"></i></a>
+                <div class="card mb-3">
+                    <div class="card-header" role="tab" id="section2HeaderId">
+                        <h5 class="mb-0">
+                            <a data-toggle="collapse" data-parent="#accordianId" href="#section6ContentId" aria-expanded="true" aria-controls="section6ContentId">
+                      If You Have Any Web Design Please Give Me???
+                      <span class="fa fa-chevron-down fa-1x text-info pull-right"></span>
+                    </a>
+                        </h5>
+                    </div>
+                    <div id="section6ContentId" class="collapse in" role="tabpanel" aria-labelledby="section2HeaderId">
+                        <div class="card-body bg-dark text-light">
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem placeat eaque tempore asperiores laborum exercitationem sed illo fugiat. Nihil ut minima totam! Necessitatibus incidunt laudantium doloremque unde nisi rem recusandae nam magni debitis quasi suscipit, placeat quisquam eligendi numquam itaque corrupti earum! Nam consequuntur animi ad, quas distinctio libero unde.
+                        </div>
+                    </div>
                 </div>
-            </div>
-            <div class="col-lg-3 col-md-6 my-3">
-                <div class="team-info">
-                    <img src="resourecs/img/team3.jpg" height="200" width="200" alt="Team">
-                    <h4>Sujon Das</h4>
-                    <span>Director (Finance)</span>
-                    <p class="mb-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit. At aperiam reiciendis quaerat porro iusto, nihil quasi mollitia vitae labore amet voluptatem nostrum nobis consectetur ex? Iste temporibus minima id molestiae!</p>
-                    <a href="https://www.facebook.com/Mecha Techno LTD"><i class="fab fa-facebook text-dark fa-2x mx-1"></i></a>
-                    <a href="https://www.gmail.com/mechatechno@gmail.com"><i class="fas fa-envelope text-dark fa-2x mx-1"></i></a>
+                <div class="card mb-3">
+                    <div class="card-header" role="tab" id="section2HeaderId">
+                        <h5 class="mb-0">
+                            <a data-toggle="collapse" data-parent="#accordianId" href="#section7ContentId" aria-expanded="true" aria-controls="section7ContentId">
+                      Actully I am looking For a Job??
+                      <span class="fa fa-chevron-down fa-1x text-info pull-right"></span>
+                    </a>
+                        </h5>
+                    </div>
+                    <div id="section7ContentId" class="collapse in" role="tabpanel" aria-labelledby="section2HeaderId">
+                        <div class="card-body bg-dark text-light">
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem placeat eaque tempore asperiores laborum exercitationem sed illo fugiat. Nihil ut minima totam! Necessitatibus incidunt laudantium doloremque unde nisi rem recusandae nam magni debitis quasi suscipit, placeat quisquam eligendi numquam itaque corrupti earum! Nam consequuntur animi ad, quas distinctio libero unde.
+                        </div>
+                    </div>
                 </div>
-            </div>
-            <div class="col-lg-3 col-md-6 my-3">
-                <div class="team-info">
-                    <img src="resourecs/img/team4.jpg" height="200" width="200" alt="Team">
-                    <h4>Md. Jamal Hossain Jakir</h4>
-                    <span>Director ( Engineer & Finance)</span>
-                    <p class="mb-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit. At aperiam reiciendis quaerat porro iusto, nihil quasi mollitia vitae labore amet voluptatem nostrum nobis consectetur ex? Iste temporibus minima id molestiae!</p>
-                    <a href="https://www.facebook.com/Mecha Techno LTD"><i class="fab fa-facebook text-dark fa-2x mx-1"></i></a>
-                        <a href="https://www.gmail.com/mechatechno@gmail.com"><i class="fas fa-envelope text-dark fa-2x mx-1"></i></a>
+                <div class="card mb-3">
+                    <div class="card-header" role="tab" id="section2HeaderId">
+                        <h5 class="mb-0">
+                            <a data-toggle="collapse" data-parent="#accordianId" href="#section8ContentId" aria-expanded="true" aria-controls="section8ContentId">
+                      You Can Give This Type of task. Its My plasure!!
+                      <span class="fa fa-chevron-down fa-1x text-info pull-right"></span>
+                    </a>
+                        </h5>
+                    </div>
+                    <div id="section8ContentId" class="collapse in" role="tabpanel" aria-labelledby="section2HeaderId">
+                        <div class="card-body bg-dark text-light">
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem placeat eaque tempore asperiores laborum exercitationem sed illo fugiat. Nihil ut minima totam! Necessitatibus incidunt laudantium doloremque unde nisi rem recusandae nam magni debitis quasi suscipit, placeat quisquam eligendi numquam itaque corrupti earum! Nam consequuntur animi ad, quas distinctio libero unde.
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
-</section>
-
-
-
-
-
-
-
-
-
+</div>
+  
 
 
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.slim.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.1/umd/popper.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.2/js/bootstrap.min.js"></script>
+<script src="resourecs/js/main.js"></script>
 </body>
 </html>
+
+
